# snip-36-prover-web

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rust-toolchain.toml  snip36
.github/workflows/: build-deps.yml  daily-health.yml
apps/counter/src/: routes.rs
crates/blockifier-reexecution-wasm/: Cargo.toml
crates/blockifier-reexecution-wasm/src/: errors.rs  lib.rs  rpc_state_reader.rs  state_reader.rs  utils.rs
crates/blockifier-reexecution-wasm/src/state_reader/: config.rs  reexecution_state_reader.rs  rpc_objects.rs  rpc_state_reader.rs
crates/snip36-core/: Cargo.toml
crates/snip36-core/src/: proof.rs  rpc.rs  signing.rs
crates/snip36-virtual-os/: Cargo.toml
crates/snip36-virtual-os/src/: lib.rs  main.rs
crates/snip36-web-prover/: Cargo.toml
crates/snip36-web-prover/src/: lib.rs
crates/starknet-transaction-prover-wasm/: Cargo.toml
crates/starknet-transaction-prover-wasm/src/: config.rs  errors.rs  lib.rs  proving.rs  rpc_compat.rs  running.rs
crates/starknet-transaction-prover-wasm/src/proving/: prover.rs  virtual_snos_prover.rs
crates/starknet-transaction-prover-wasm/src/running/: classes_provider.rs  committer_utils.rs  runner.rs  serde_utils.rs  storage_proofs.rs  virtual_block_executor.rs
scripts/: run-virtual-os.sh
tests/: README.md
web/frontend/: package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.tsx  vite-env.d.ts
