[workspace]
resolver = "2"
members = [
    "crates/snip36-core",
    "crates/snip36-web-prover",
]
# The extractor crate depends on deps/sequencer/ (cloned by `snip36 setup`).
# It is excluded from the default workspace so `cargo build` works without it.
exclude = ["extractor"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/esdras-santos/snip-36-prover-web"

[workspace.dependencies]
# Imported from deps/sequencer workspace so path dependencies with `workspace = true`
# resolve correctly from this repo root.
apollo_compile_to_casm = { path = "deps/sequencer/crates/apollo_compile_to_casm", version = "0.18.0-dev.2" }
apollo_compile_to_native = { path = "deps/sequencer/crates/apollo_compile_to_native", version = "0.18.0-dev.2" }
apollo_config = { path = "deps/sequencer/crates/apollo_config", version = "0.18.0-dev.2" }
apollo_infra_utils = { path = "deps/sequencer/crates/apollo_infra_utils", version = "0.18.0-dev.2" }
apollo_metrics = { path = "deps/sequencer/crates/apollo_metrics", version = "0.18.0-dev.2" }
apollo_proc_macros = { path = "deps/sequencer/crates/apollo_proc_macros", version = "0.18.0-dev.2" }
apollo_sizeof = { path = "deps/sequencer/crates/apollo_sizeof", version = "0.18.0-dev.2" }
apollo_sizeof_macros = { path = "deps/sequencer/crates/apollo_sizeof_macros", version = "0.18.0-dev.2" }
apollo_starknet_os_program = { path = "deps/sequencer/crates/apollo_starknet_os_program", version = "0.18.0-dev.2" }
apollo_time = { path = "deps/sequencer/crates/apollo_time", version = "0.18.0-dev.2" }
blockifier = { path = "deps/sequencer/crates/blockifier", version = "0.18.0-dev.2" }
blockifier_reexecution = { path = "deps/sequencer/crates/blockifier_reexecution" }
blockifier_test_utils = { path = "deps/sequencer/crates/blockifier_test_utils", version = "0.18.0-dev.2" }
native_blockifier = { path = "deps/sequencer/crates/native_blockifier" }
shared_execution_objects = { path = "deps/sequencer/crates/shared_execution_objects" }
starknet_api = { path = "deps/sequencer/crates/starknet_api", version = "0.18.0-dev.2" }
starknet_os = { path = "deps/sequencer/crates/starknet_os" }
starknet_proof_verifier = { path = "deps/sequencer/crates/starknet_proof_verifier", version = "0.18.0-dev.2" }
starknet_transaction_prover = { path = "deps/sequencer/crates/starknet_transaction_prover" }
workspace_tests = { path = "deps/sequencer/workspace_tests" }

# External versions mirrored from sequencer workspace where needed
aerospike = "=2.0.0-alpha.6"
alloy = "1.1.0"
alloy-primitives = "1.5"
anyhow = "1.0.44"
ark-bls12-381 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-poly = "0.5.0"
ark-secp256k1 = "0.5.0"
ark-secp256r1 = "0.5.0"
assert-json-diff = "2.0.2"
assert_matches = "1.5.0"
async-recursion = "1.1.0"
async-stream = "0.3.3"
async-trait = "0.1.79"
asynchronous-codec = "0.7.0"
axum = "0.8"
base64 = "0.22"
bincode = "1.3.3"
bitvec = "1.0.1"
blake2 = "0.10.6"
bytes = "1"
bzip2 = { version = "0.5.0", default-features = false }
c-kzg = "2.1.5"
cached = "0.44.0"
cairo-air = "1.1.0"
cairo-felt = "0.9.1"
cairo-lang-casm = "2.16.0"
cairo-lang-runner = "2.16.0"
cairo-lang-sierra = "2.16.0"
cairo-lang-sierra-to-casm = "2.16.0"
cairo-lang-starknet-classes = "2.16.0"
cairo-lang-utils = "2.16.0"
cairo-native = "0.9.0-rc.2"
cairo-program-runner-lib = "1.1.0"
cairo-vm = "3.2.0"
camelpaste = "0.1.0"
chrono = "0.4.26"
clap = "4.5.4"
color-eyre = "0.6"
colored = "3"
const_format = "0.2.30"
criterion = "0.5.1"
csv = "1.3.1"
dashmap = "6.1.0"
deadqueue = "0.2.4"
defaultmap = "0.5.0"
derive_more = "2.1.1"
digest = "0.10.7"
dotenvy = "0.15"
enum-as-inner = "0.6.1"
enum-assoc = "1.1.0"
enum-iterator = "2.3.0"
ethnum = "1.5.0"
eyre = "0.6"
expect-test = "1.5.1"
flate2 = "1.0.24"
futures = "0.3.21"
futures-channel = "0.3.21"
futures-util = "0.3.21"
glob = "0.3.1"
google-cloud-storage = "0.22.1"
hex = "0.4"
http = "1.1"
http-body-util = "0.1"
human_bytes = "0.4.3"
hyper = "1.8"
hyper-util = "0.1.19"
indexmap = "2.1.0"
indoc = "2.0.5"
insta = "1.29.0"
integer-encoding = "3.0.4"
itertools = "0.12.1"
json-patch = "4.1.0"
jsonrpsee = "0.26.0"
jsonschema = "0.17.0"
keccak = "0.1.3"
lazy_static = "1.5.0"
libmdbx = "0.3.5"
libp2p = "0.56.0"
libp2p-swarm-test = "0.6.0"
log = "0.4"
lru = "0.12.0"
memmap2 = "0.8.0"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.1"
mockall = "0.12.1"
mockito = "1.4.0"
nix = "0.20.0"
notify = "8.2.0"
num-bigint = "0.4"
num-integer = "0.1.45"
num-rational = "0.4"
num-traits = "0.2.15"
num_enum = "0.7.3"
once_cell = "1.19.0"
os_info = "3.6.0"
page_size = "0.6.0"
parity-scale-codec = "3.6"
parity-scale-codec-derive = "3.6"
paste = "1.0.15"
phf = "0.11"
pretty_assertions = "1.4.0"
primitive-types = "0.12.1"
privacy-circuit-verify = { git = "https://github.com/starkware-libs/proving-utils", rev = "dbc39e745d23424f1997ce3505ce5f83805cefde" }
privacy-prove = { git = "https://github.com/starkware-libs/proving-utils", rev = "dbc39e745d23424f1997ce3505ce5f83805cefde" }
proc-macro2 = "1.0"
prometheus-parse = "0.2.4"
prost = "0.12.1"
prost-build = "0.12.1"
prost-types = "0.12.1"
protoc-prebuilt = "0.3.0"
pyo3 = "0.19.1"
pyo3-log = "0.8.1"
quote = "1.0.26"
rand = "0.8"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
reed-solomon-simd = "3.1.0"
regex = "1.10.4"
replace_with = "0.1.7"
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
retry = "2.0.0"
rlimit = "0.10.2"
rstest = "0.26.1"
rstest_reuse = "0.7.0"
rust-rocksdb = "0.44.1"
rustc-hex = "2.1.0"
schemars = "1.0.4"
semver = "1.0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1.19"
serde_with = "3.12.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
simple_logger = "4.0.0"
socket2 = "0.5.8"
starknet-core = "0.16.0"
starknet-crypto = "0.8"
starknet-ff = "0.3.7"
starknet-rust = "0.17.0"
starknet-rust-core = "0.16.0"
starknet-types-core = "0.2"
static_assertions = "1.1.0"
strum = "0.27.2"
syn = "2.0.39"
tempfile = "3.7.0"
test-case = "3.2.1"
test-log = "0.2.14"
thiserror = "2"
tikv-jemallocator = "0.5.4"
time = "0.3.37"
tokio = { version = "1", features = ["full"] }
tokio-metrics = "0.4.4"
tokio-retry = "0.3"
tokio-rustls = "0.26.4"
tokio-stream = "0.1.8"
tokio-test = "0.4.4"
tokio-util = "0.7.13"
toml = "0.8"
tower = "0.5.2"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-test = "0.2"
trybuild = "1.0.105"
unsigned-varint = "0.8.0"
url = "2.5.0"
validator = "0.20"
void = "1.0.2"
waker-fn = "1.2.0"
zstd = "0.13.1"
