[package]
name = "blockifier-reexecution-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
blockifier = { git = "https://github.com/starkware-libs/sequencer", tag = "PRIVACY-0.14.2-RC.2", package = "blockifier" }
cairo-lang-starknet-classes = "2.16.0"
flate2 = { version = "1.0.24", default-features = false, features = ["rust_backend"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
starknet_api = { git = "https://github.com/starkware-libs/sequencer", tag = "PRIVACY-0.14.2-RC.2", package = "starknet_api", default-features = false }
starknet-core = "0.16.0"
starknet-types-core = "0.2"
thiserror = "2"
url = "2.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen-futures = "0.4"
