[package]
name = "snip36-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core library for SNIP-36 virtual block proving — types, config, RPC, signing, proof handling"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
cli = ["dep:regex-lite"]

[dependencies]
starknet-crypto = { workspace = true }
starknet-types-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tracing = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
dotenvy = { workspace = true }
hex = { workspace = true }
regex-lite = { version = "0.1", optional = true }
futures = { workspace = true }
gloo-timers = { version = "0.3", features = ["futures"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
