[package]
name = "snip36-virtual-os"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2.5.0"
anyhow = "1.0.44"
async-trait = "0.1.79"
clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
starknet_transaction_prover = { path = "../../deps/sequencer/crates/starknet_transaction_prover", features = ["stwo_proving"] }

[workspace]
resolver = "2"
members = []
