[package]
name = "snip36-web-prover"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
snip36-core = { path = "../snip36-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
starknet-types-core = { workspace = true }
